<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FormProdutos"
    android:background="@drawable/ro">


    <TextView
        android:id="@+id/cadastrar_produto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="38dp"
        android:text="@string/cadastrar_produto"
        android:textColor="@color/white"
        android:textSize="38sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/containerComponentes"
        style="@style/containerComponents"
        android:layout_width="391dp"
        android:layout_height="511dp"
        android:layout_below="@id/cadastrar_produto"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="19dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/produtoEditTextForm"
        style="@style/Edit_Text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cadastrar_produto"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="10dp"
        android:drawableEnd="@android:drawable/ic_menu_send"
        android:hint="@string/produtoEditTextForm"
        android:minHeight="48dp"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/quantidadeEditTextForm"
        style="@style/Edit_Text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/produtoEditTextForm"
        android:layout_marginStart="100dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="10dp"
        android:drawableEnd="@android:drawable/ic_menu_edit"
        android:hint="Quantidade"
        android:minHeight="48dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/cadastrarButtonForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/quantidadeEditTextForm"
        android:layout_marginStart="30dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:text="@string/cadastrarButtonForm"
        android:drawableEnd="@android:drawable/ic_menu_add"
        android:textSize="17dp"
        android:textColor="@color/black"/>


    <Button
        android:id="@+id/mostrarButtonForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/cadastrarButtonForm"
        android:layout_marginStart="30dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/green"
        android:drawableEnd="@android:drawable/ic_menu_search"
        android:text="@string/mostrarButtonForm"
        android:textColor="@color/black"
        android:textSize="17dp" />

    <TextView
        android:id="@+id/resultadoTextViewForm"
        style="@style/Edit_Text"
        android:layout_width="395dp"
        android:layout_height="174dp"
        android:layout_below="@id/mostrarButtonForm"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="-6dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/resultadoTextViewForm"
        android:textColor="@color/black" />
</RelativeLayout>